# griptape-nodes-example-with-app

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  app.py  published_nodes_workflow.py  pyproject.toml  worker.py  workflow_server.py  workflow_server_manager.py
tests/: test_app.py
