[project]
name = "griptape-nodes-example-with-app"
version = "0.1.0"
description = "A simple Gradio app that invokes a Python subprocess"
authors = [
    { name = "James Clarendon", email = "james@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "typos>=1.26.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "TD002",   # Missing author in TODO
    "FIX002",  # Line contains TODO
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D107",    # Missing docstring in __init__
    "D105",    # Missing docstring in magic method
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "E501",    # Line too long (TODO: fix these)
    "BLE001",  # Do not catch blind exception: Exception (TODO: fix these)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert detected
    "D104",    # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.typos]

[tool.typos.default.extend-words]
# Add custom words here if needed

[tool.typos.files]
extend-exclude = []

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
reportIncompatibleMethodOverride = false
